--- a/themes/survey/ls6_surveytheme/css/variations/theme_apple.css
+++ b/themes/survey/ls6_surveytheme/css/variations/theme_apple.css
@@ -10442,11 +10442,6 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.space-col {
-  margin-top: 1em;
-  margin-bottom: 2em;
-}
-
 .group-outer-container {
   display: flex;
 }
@@ -10460,37 +10455,12 @@ textarea.form-control-lg {
   background: transparent;
 }
 
-.top-container {
-  width: 100%;
-  padding: 0;
-  border-bottom: none;
-  color: inherit;
-}
-
-.top-container .top-content {
-  padding-top: 1em;
-  padding-bottom: 1em;
-  margin-bottom: 2em;
-}
-
-.no-js .top-content .form-change-lang {
-  display: none;
-}
-
-.top-container .top-content:empty {
-  display: none;
-}
-
 .group-description:empty {
   display: none;
 }
 
 .group-title:empty {
   display: none;
-}
-
-.top-container .form-change-lang {
-  text-align: center;
 }
 
 /**
@@ -12197,8 +12167,8 @@ Responsive navbar-brand image CSS
 }
 #survey-nav .navbar-toggler {
   border: none;
-  padding: 0;
-  margin-top: 20px;
+  padding-right: 0;
+  line-height: 20px;
 }
 #survey-nav .navbar-toggler .ri-more-fill {
   font-size: 1.92375rem;
@@ -15241,6 +15211,12 @@ a [class^=ri-], a [class*=" ri-"] {
   margin-top: 40px;
 }
 
+.top-container {
+  margin-bottom: 2rem;
+}
+.top-container .ls-progress-container {
+  padding: 4px 0;
+}
 .top-container .progress {
   height: 2px;
   margin-bottom: 0;
@@ -15445,6 +15421,11 @@ html, body {
   font-family: "remixicon";
   content: "\ea50";
   z-index: 5;
+}
+
+.space-col {
+  margin-top: 1em;
+  margin-bottom: 2em;
 }
 
 .darkmode-on {
